# jams-app

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: main.yml
docs/: Full.md  MVP.md  Release-Announcement.md  Workflow.md
src/: index.css  main.ts  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: A_Lazy_Farmer_Boy_by_Buster_Carter_And_Preston_Young.mp3.txt
src-tauri/src/: frontend.rs  lib.rs  main.rs  secure_sk.rs  server.rs
src/backend/: autonomi.tsx  backend-store.ts  logic.tsx  metadata.ts  uploading.ts
src/components/: AppSidebar.tsx  Dashboard.tsx  LanguageSwitcher.tsx  NotFound.tsx  RootLayout.tsx  ThemeToggler.tsx  agreement-modal.tsx  alert-confirmation-modal.tsx  console-interceptor.tsx  console-logger.tsx  dashboard.tsx  disconnect-button.tsx  disconnected-panel.tsx  dropzone.tsx  favorites-panel.tsx  language-switcher.tsx  not-found.tsx  root-layout.tsx  select-year.tsx  splash-screen.tsx  tag-input.tsx  theme-toggler.tsx
src/components/account/: AccountConnect.tsx  Avatar.tsx  RecentAccounts.tsx  account-connect.tsx
src/components/account/add-account/: AddAccountPanel.tsx
src/components/account/create-account/: CreateAccountPanel.tsx  create-account-panel.tsx
src/components/account/recover-account/: recover-account-panel.tsx
src/components/admin-panel/: admin-panel-layout.tsx  collapse-menu-button.tsx  footer.tsx  menu.tsx  navbar.tsx  sheet-menu.tsx  sidebar.tsx  user-nav.tsx
src/components/player/: audio-provider.tsx  forward-button.tsx  mute-button.tsx  play-button.tsx  playback-rate-button.tsx  player.tsx  rewind-button.tsx  slider.tsx  song-load-button.tsx  sound-button.tsx
src/components/player/icons/: play-icon.tsx  (+1 more)
src/components/playlists/: create-playlist-panel.tsx  edit-playlist-panel.tsx  playlists-panel.tsx  playlists-scroller.tsx
src/components/settings/: console-logger-settings.tsx  network-settings.tsx  notification-settings.tsx  preference-settings.tsx  status-settings.tsx  storage-settings.tsx
src/components/songs/: edit-existing-song.tsx  songs-panel.tsx  songs-scroller.tsx
src/components/ui/: playlist-selection-modal.tsx  vertical-slider.tsx
src/components/upload-songs/: upload-songs-panel.tsx
src/enums/: errors.ts  languages.ts
src/form-schemas/: create-account-schema.ts  create-playlist-schema.ts  edit-playlist-schema.ts  edit-song-schema.ts  file-picture-schema.ts  recover-account-schema.ts  sign-in-schema.ts  single-file-upload-schema.ts
src/hooks/: use-debounced-value.ts  use-image-selector.ts  use-tag-manager.ts
src/i18n/: config.ts
src/i18n/de/: de_translation.json
src/i18n/en/: en_translation.json
src/i18n/es/: es_translation.json
src/i18n/hi/: hi_translation.json
src/i18n/zh/: zh_translation.json
src/interfaces/: song.tsx  user.tsx
src/lib/: menu-list.ts
src/lib/account/: account.ts
src/lib/faucet/: faucet.ts
src/lib/utils/: address.ts  balance.ts  clipboard.ts  downloading.ts  formatting.ts  images.ts  location.ts  menu-list.ts  validation.ts
src/pages/: add-network-song.tsx  create-playlist.tsx  edit-playlist.tsx  favorites.tsx  playlists.tsx  settings.tsx  songs.tsx  upload-songs.tsx
src/providers/: connection-provider.tsx  language-provider.tsx  storage-provider.tsx
src/store/: edit-playlist-id.ts  frontend-logs-store.ts  player-store.ts  store.ts
src/types/: account-user.ts  file-detail.ts  file-meta.ts  file-picture.ts  local-file-detail.ts  logs-store.ts  network-file-detail.ts  recent-account.ts  song.ts
src/types/formats/: audio-formats.ts
src/types/playlists/: playlist.ts
src/types/songs/: song-upload.ts  song.ts
(+12 files in other folders)
