[package]
name = "jams-desktop"
version = "0.1.0"
description = "JAMS Desktop"
authors = ["cobite", "loziniak", "Nick Virag"]
license = "UNLICENSED"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jams_lib"
path = "src/lib.rs" 
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
futures = "*"
argon2 = "0.5"
password-hash = "0.5"
aes-gcm = "*"
warp = "*"
tauri = { version = "2.0.1", features = [] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-store = "2.0.1"
tauri-plugin-fs = "2.0.1"
tauri-plugin-dialog = "2.0.1"
lazy_static = "1.4.0"
tauri-plugin-clipboard-manager = "2.0.1"
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
dotenvy = "0.15"
# needs to have Git command installed and be able to authenticate the GitHub repository
# configuration in .cargo/config.toml
safe = { version = "0.1.3", git = "ssh://git@github.com/JAMSplayer/safe.git" }
