[package]
name = "jams-desktop"
version = "0.1.1"
description = "JAMS Desktop"
authors = ["cobite", "loziniak", "Nick Virag"]
license = "UNLICENSED"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jams_lib"
path = "src/lib.rs" 
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
futures = "*"
hex = "*"
argon2 = "0.5"
password-hash = "0.5"
aes-gcm = "*"
warp = "*"
tauri = { version = "2.2", features = [] }
tauri-plugin-shell = "2.2"
tauri-plugin-store = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-dialog = "2.2"
lazy_static = "*"
tauri-plugin-clipboard-manager = "2.2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
lofty = "0.22"
image = "0.25"
# needs to have Git command installed and be able to authenticate the GitHub repository
# configuration in .cargo/config.toml
safe = { version = "0.2.1", git = "ssh://git@github.com/JAMSplayer/safe.git" }
