[package]
name = "jams-desktop"
version = "0.1.3"
description = "JAMS Desktop"
authors = ["Nigel", "cobite", "loziniak", "Nick Virag"]
license = "UNLICENSED"
homepage = "https://jams.community/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jams_lib"
path = "src/lib.rs" 
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
futures = "*"
hex = "*"
warp = "*"
tauri = { version = "2.2", features = [ "protocol-asset", "devtools"] }
tauri-plugin-shell = "2.2"
tauri-plugin-store = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-dialog = "2.2"
lazy_static = "*"
tauri-plugin-clipboard-manager = "2.2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-sql = { version = "2.2", features = ["sqlite"] }
tauri-plugin-os = "2.2"
lofty = "0.22"
image = "0.25"
safeapi = { version = "0.3.1" }

[target.'cfg(target_os = "linux")'.dependencies]
warp = "*"
serde_urlencoded = "*"
